# bond-analyzer-rs

./: Cargo.toml  README.md  output.txt
src/: args.rs  bond.rs  lib.rs  main.rs
tests/: cli.rs
