[package]
name = "bond-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive"] }
chrono = "0.4"
itertools = "0.10.5"
yearfrac = "0.2"
tabled = "0.12.0"
thiserror = "1.0"
mockall = "0.11.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
